[package]
name = "bloub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version="0.28.1", default-features = false, features = ["x11"]  }
pixels = "0.11.0"
winit_input_helper = "0.14.0"
iter_tools = "0.1.4"
